--- a/style.css
+++ b/style.css
@@ -21,14 +21,18 @@ div, ul, li {
 }
 
 header {
-  display: block;
+    display: block;
 }
 
 .Header {
-  width: 100%;
-  position: absolute;
-  padding-top: 20px;
-  padding-bottom: 20px;
+    width: 100%;
+    position: absolute;
+} 
+
+.Header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 100%;
 }
 
 @media screen and (max-width: 767px) {
@@ -41,6 +45,10 @@ header {
 .Header {
     background-color: #fff;
     z-index: 10;
+} }
+
+@media screen and (max-width: 1080px) {
+.Header--common {
     position: fixed !important;
 } }
 
@@ -103,6 +111,27 @@ img {
   align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+.HeaderNavList {
+    top: 52px;
+} }
+
+@media screen and (max-width: 1080px) {
+.HeaderNavList { 
+    overflow-y: scroll;
+    position: fixed;
+    top: 60px;
+    left: 100%;
+    width: 100%;
+    display: block;
+    padding-top: 20px;
+    padding-bottom: 75px;
+    transition: transform 0.5s;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100%;
+} }
+
 @media screen and (max-width: 1080px) {
 .HeaderNavHamburger {
   cursor: pointer;
@@ -116,6 +145,11 @@ img {
 @media screen and (max-width: 1080px) {
 .HeaderNavHamburger__line:first-child {
     top: 0;
+} }
+
+@media screen and (max-width: 1080px) {
+.HeaderNavHamburger__line:last-child {
+    top: 100%;
 } }
 
 @media screen and (max-width: 1080px) {
@@ -165,7 +199,7 @@ a {
 }
 
 .HeaderNavListItem__link>span:first-child {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif ;
 }
 
 .HeaderNavListItem__link>span {
@@ -201,6 +235,11 @@ a {
   text-align: center;
   font-size: 12px;
 }
+
+@media screen and (min-width: 768px) {
+.HeaderNavListItem__button:hover {
+    opacity: 0.8;
+} }
   
 .First {
   background-image: url(https://camp.potepan.com/wp-content/themes/potepancamp/assets/images/home/first-view/top-hero.jpg)
@@ -233,6 +272,11 @@ section {
 @media screen and (max-width: 767px) {
 .FirstView__main-image--sp {
     display: block;
+} }
+
+@media screen and (max-width: 767px) {
+.First-container {
+    margin-top: -45vw;
 } }
 
 .First-container {
@@ -328,6 +372,11 @@ section {
     transition: opacity 0.2s;
 } }
 
+@media screen and (min-width: 768px) {
+.FirstContent__buttons a:hover {
+    opacity: 0.8;
+} }
+
 @media screen and (max-width: 767px) {
 .FirstContent__buttons a:first-of-type {
     margin-right: 0;
@@ -362,6 +411,11 @@ section {
     color: #000;
     width: 176px;
 }
+
+@media screen and (max-width: 767px) {
+.FirstContent__buttons a:last-of-type {
+    display: none;
+} }
 
 .FirstCamption {
     color: #A2A2A4;
@@ -490,6 +544,11 @@ p {
   font-weight: 700;
   line-height: 32px;
 }
+
+@media screen and (min-width: 768px) {
+.About__button a:hover {
+    opacity: 0.8;
+} }
 
 .About__button a span:last-child {
   font-size: 12px;
